--- a/calibr8/data-pipeline/Makefile
+++ b/calibr8/data-pipeline/Makefile
@@ -2,6 +2,8 @@
 OUTPUT_FOLDER=bin
 OUTPUT_BINARY=calibr8
 
+include ./config.properties
+
 .PHONY: init
 init:
 	go mod tidy
@@ -12,8 +14,8 @@ init:
 run:
 	go run cli/main.go \
 		--dataset="test" \
-		--helius_grpc_url="https://api.testnet.solana.com" \
-		--helius_api_key="testkey"
+		--helius_grpc_url=${HELIUS_GRPC_URL} \
+		--helius_api_key=${HELIUS_API_KEY}
 
 .PHONY: build
 build: clean init
